fixed sidebar collapse btn positioning

--- a/src/components/EditorTabBar/styles.scss
+++ b/src/components/EditorTabBar/styles.scss
@@ -14,7 +14,7 @@
   position: absolute;
   z-index: 1000;
   top: -0px;
-  left:-48px;
+  left:-42px;
   padding:1.5em 0.75em;
   transition:transform 0.25s linear 0.25s;
   cursor: pointer;
@@ -23,7 +23,7 @@
     content: '\ea42';
   }
   &.active {
-    transform:rotateZ(540deg);
+    transform:rotateZ(180deg);
     left:-60px !important;
   }
   
